--- a/src/pages/ShowPage/ShowPage.module.scss
+++ b/src/pages/ShowPage/ShowPage.module.scss
@@ -1,4 +1,3 @@
-// ShowPage.module.scss
 
 @keyframes glowing {
   0% {
@@ -17,19 +16,19 @@
   align-items: center;
   justify-content: center;
   padding: 20px;
-  background-color: black; /* Set page background color to black */
+  background-color: black;
 }
 
 .link {
-  color: lime; /* Example link color */
+  color: lime; 
   background-color: grey;
   text-decoration: none;
   margin-bottom: 20px;
-  transition: transform 0.3s ease; /* Add transition for smooth hover effect */
+  transition: transform 0.3s ease;
 }
 
 .link:hover {
-  transform: translateY(-5px); /* Apply hover effect */
+  transform: translateY(-5px);
 }
 
 .title {
@@ -44,17 +43,17 @@
 }
 
 .button {
-  background-color: grey; /* Example button background color */
-  color: lime; /* Example button text color */
+  background-color: grey; 
+  color: lime; 
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
   margin-bottom: 10px;
-  animation: glowing 1.5s infinite alternate; /* Apply glowing animation */
+  animation: glowing 1.5s infinite alternate; 
 }
 
 .button:hover {
-  transform: translateY(-3px); /* Apply hover effect */
+  transform: translateY(-3px); 
 }
